--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
         <title>Antoine Birkhofer Creative Frontend Developer</title>
         <link rel="alternate" hreflang="en" href="https://www.antoine-birkhofer.com">
         <link rel="alternate" hreflang="fr" href="https://fr.antoine-birkhofer.com">
+        <script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
+        <script>
+            Weglot.initialize({
+                api_key: 'wg_0bc0577e8805d74eb64dcaca52eb757d3'
+            });
+        </script>
     </head>
     <body>
         <div id="root"></div>
